Update index.html logo

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
     <nav>
         <div class="nav-container">
             <div class="logo">
-                <img src="logo.png" alt="KCR Logo" class="logo-img">
+                <img src="templogo.png" alt="KCR Logo" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -714,11 +714,11 @@
     <!-- About Section -->
     <section id="about">
         <h2 class="section-title">About Us</h2>
-        <p class="section-subtitle">We're UCF's premier combat robotics club, dedicated to engineering destruction and competitive excellence</p>
+        <p class="section-subtitle">We're UCF's premiere combat robotics club, dedicated to excellence in everything we do</p>
         <div class="about-grid">
             <div class="about-card">
                 <h3>What We Do</h3>
-                <p>We design, build, and compete with combat robots in various weight classes. From 1lb antweights to 3lb beetleweights, we create machines built for battle.</p>
+                <p>We design, build, and compete with combat robots in various weight classes. From 1lb antweights to 3lb beetleweights, we create robots to dominate the competition.</p>
             </div>
             <div class="about-card">
                 <h3>Competition Focus</h3>
@@ -734,7 +734,7 @@
     <!-- Robots Section -->
     <section id="robots">
         <h2 class="section-title">Our Robots</h2>
-        <p class="section-subtitle">Meet our combat machines designed to dominate the arena</p>
+        <p class="section-subtitle">Meet our combat robots designed to dominate the arena</p>
         <div class="robots-grid">
             <div class="robot-card">
                 <div class="robot-image"></div>
